--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,10 @@ h1 {
   margin: 0.67em 0;
 }
 
+h2 {
+  font-size: 1.5rem;
+  margin: 0.67em 0;
+}
 /* Grouping content
    ========================================================================== */
 
